--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ArinelliDesignDeveloper</title>
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="icon" href="favicon.ico?v=2" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,26 +25,57 @@
       href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="icon" href="favicon.ico?v=2" />
   </head>
-  <body>
-    <div class="top-container">
-      <div>
-        <img class="cloud1" src="images/cloud.png" alt="cloud-img" />
-      </div>
-      <h1>Arinelli</h1>
-      <h2 class="resume">a Designer UI/UX who can Code for you</h2>
-      <div>
-        <img class="cloud2" src="images/cloud.png" alt="cloud-img" />
+  <body class="">
+    <div class="top-container img-fluid">
+      <!-- <div>
+        <img class="cloud2 img-fluid" src="images/cloud.png" alt="cloud-img" />
       </div>
       <div>
-        <img class="cloud3" src="images/cloud.png" alt="cloud-img" />
+        <img class="cloud3 img-fluid" src="images/cloud.png" alt="cloud-img" />
+      </div> -->
+      <h1 class="a-navbar-brand text-center">Arinelli</h1>
+      <h2 class="resume text-center">a Designer UI/UX who can Code for you</h2>
+      <div class="">
+        <div class="container">
+          <img
+            class="cloud1 img-fluid mx-auto d-flex"
+            src="images/cloud.png"
+            alt="cloud-img"
+          />
+        </div>
+        <div>
+          <img
+            class="cloud2 img-fluid mx-auto d-flex"
+            src="images/cloud.png"
+            alt="cloud-img"
+          />
+        </div>
+        <div class="">
+          <img
+            class="cloud3 img-fluid mx-auto d-flex"
+            src="images/cloud.png"
+            alt="cloud-img"
+          />
+        </div>
       </div>
       <div>
-        <img class="mountain" src="images/mountain.png" alt="mountain-img" />
+        <img
+          class="mountain img-fluid mx-auto d-flex"
+          src="images/mountain.png"
+          alt="mountain-img"
+        />
       </div>
     </div>
-    <div class="middle-container">
-      <!-- <div class="profile">
+    <!-- <div class="middle-container">
+      <div class="profile">
         <img
           class="profileImg"
           src="images/patrickGuitar.jpg"
@@ -48,50 +85,77 @@
         <p class="profile-p">
           Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna.
           Non auctor, montes nulla distinctio.
-        </p> -->
-      </div>
-      <hr />
-      <div class="skills">
-        <h2 class="h2skills">My Skills</h2>
-        <div class="skill-row">
-          <img class="developer-img" src="images/prog1.png" alt="developer" />
-          <h3>Development</h3>
-          <p>
-            Lorem ipsum dolor sit amet, quis in duis, iaculis id felis.
-            Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit
-            nam, lectus ante, ut lorem eros.
-          </p>
-        </div>
-        <div class="skill-row">
-          <img class="design-img" src="images/design-image.png" alt="skills" />
-          <h3>Design</h3>
-          <p>
-            Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu,
-            bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel
-            eu, rutrum nam.
-          </p>
-        </div>
-      </div>
-      <hr />
-      <div class="contact-me">
-        <h2 class="h2header2">Get In Touch</h2>
-        <h3 class="lasth3">Lorem ipsum dolor sit amet, non elit.</h3>
-        <p class="lastP">
-          Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales,
-          tellus donec dui, ornare erat.
+        </p>
+    </div> -->
+    <div class="d1 skill-row text-center img-fluid">
+      <hr class="dotted3 mx-auto shadow p-3 mb-4 mt-0" />
+      <hr class="dotted3 mx-auto shadow p-3 mb-4 mt-0" />
+      <hr class="dotted3 mx-auto shadow p-3 mb-4 mt-0" />
+    </div>
+    <h4 class="display-6 fw-bold">My Skills</h4>
+
+    <div class="skills">
+      <div class="skill-row">
+        <img
+          class="developer-img img-fluid"
+          src="images/prog1.png"
+          alt="developer"
+        />
+        <h3>Full Stack Development</h3>
+        <p>
+          Lorem ipsum dolor sit amet, quis in duis, iaculis id felis.
+          Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam,
+          lectus ante, ut lorem eros.
         </p>
       </div>
-      <button class="cta">
-        <span>Contact Me</span>
-        <svg width="15px" height="10px" viewBox="0 0 13 10">
-          <path d="M1,5 L11,5"></path>
-          <polyline points="8 1 12 5 8 9"></polyline>
-        </svg>
-      </button>
+      <div class="skill-row">
+        <img
+          class="design-img img-fluid"
+          src="images/design-image.png"
+          alt="skills"
+        />
+        <h3>Design</h3>
+        <p>
+          Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu,
+          bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu,
+          rutrum nam.
+        </p>
+      </div>
     </div>
-    <div class="bottom-margin">
-      <a class="footer-link" href="https://www.linkedin.com/in/patrick-arinelli/">LinkedIn</a>
-      <a class="footer-link" href="https://www.facebook.com/patrickarinelli29/">Facebook</a>
+    <div class="d2 skill-row text-center img-fluid">
+      <hr class="dotted3 mx-auto shadow p-3 mb-4 mt-0" />
+      <hr class="dotted3 mx-auto shadow p-3 mb-4 mt-0" />
+      <hr class="dotted3 mx-auto shadow p-3 mb-4 mt-0" />
+    </div>
+
+    <div class="contact-me">
+      <h2 class="display-8 fw-bold h2header2">Get In Touch</h2>
+      <h3 class="lasth3">Lorem ipsum dolor sit amet, non elit.</h3>
+      <p class="lastP">
+        Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales,
+        tellus donec dui, ornare erat.
+      </p>
+    </div>
+    <div class="button-container text-center">
+      <div class="row">
+        <button class="cta col col-md-3 text-center">
+          <span>Contact Me</span>
+          <svg class="" width="15px" height="10px" viewBox="0 0 13 10">
+            <path class="" d="M1,5 L11,5"></path>
+            <polyline class="" points="8 1 12 5 8 9"></polyline>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <div class="bottom-margin img-fluid">
+      <a
+        class="footer-link"
+        href="https://www.linkedin.com/in/patrick-arinelli/"
+        >LinkedIn</a
+      >
+      <a class="footer-link" href="https://www.facebook.com/patrickarinelli29/"
+        >Facebook</a
+      >
       <p class="arinelli-p">© 2022 Arinelli</p>
     </div>
   </body>
