--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     />
     <link rel="icon" href="favicon.ico?v=2" />
   </head>
-  <body class="">
+  <body class="bodyclass">
     <div class="top-container img-fluid">
       <!-- <div>
         <img class="cloud2 img-fluid" src="images/cloud.png" alt="cloud-img" />
@@ -41,10 +41,12 @@
       <div>
         <img class="cloud3 img-fluid" src="images/cloud.png" alt="cloud-img" />
       </div> -->
-      <h1 class="a-navbar-brand text-center">Arinelli</h1>
-      <h2 class="resume text-center">a Designer UI/UX who can Code for you</h2>
+      <h1 class="a-navbar-brand text-center img-fluid">Arinelli</h1>
+      <h2 class="resume a-navbar-brand text-center img-fluid">
+        a Designer UI/UX who can Code for you
+      </h2>
       <div class="">
-        <div class="container">
+        <div class="container-fluid">
           <img
             class="cloud1 img-fluid mx-auto d-flex"
             src="images/cloud.png"
@@ -88,11 +90,13 @@
         </p>
     </div> -->
     <div class="d1 skill-row text-center img-fluid">
-      <hr class="dotted3 mx-auto shadow p-3 mb-4 mt-0" />
-      <hr class="dotted3 mx-auto shadow p-3 mb-4 mt-0" />
-      <hr class="dotted3 mx-auto shadow p-3 mb-4 mt-0" />
+      <hr class="dotted3" />
+      <hr class="dotted3 shadow" />
+      <hr class="dotted3 shadow" />
     </div>
-    <h4 class="display-6 fw-bold">My Skills</h4>
+    <div class="row">
+      <h4 class="display-6 fw-bold">My Skills</h4>
+    </div>
 
     <div class="skills">
       <div class="skill-row">
@@ -123,13 +127,15 @@
       </div>
     </div>
     <div class="d2 skill-row text-center img-fluid">
-      <hr class="dotted3 mx-auto shadow p-3 mb-4 mt-0" />
-      <hr class="dotted3 mx-auto shadow p-3 mb-4 mt-0" />
-      <hr class="dotted3 mx-auto shadow p-3 mb-4 mt-0" />
+      <hr class="dotted3" />
+      <hr class="dotted3" />
+      <hr class="dotted3" />
     </div>
 
     <div class="contact-me">
-      <h2 class="display-8 fw-bold h2header2">Get In Touch</h2>
+      <div class="row">
+        <h2 class="display-8 fw-bold">Get In Touch</h2>
+      </div>
       <h3 class="lasth3">Lorem ipsum dolor sit amet, non elit.</h3>
       <p class="lastP">
         Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales,
