--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <h2 class="resume a-navbar-brand text-center img-fluid">
         a Designer UI/UX who can Code for you
       </h2>
-      <div class="">
+      <div class="img-fluid">
         <div class="container-fluid">
           <img
             class="cloud1 img-fluid mx-auto d-flex"
@@ -53,13 +53,13 @@
             alt="cloud-img"
           />
         </div>
-        <div>
+        <!-- <div>
           <img
             class="cloud2 img-fluid mx-auto d-flex"
             src="images/cloud.png"
             alt="cloud-img"
           />
-        </div>
+        </div> -->
         <div class="">
           <img
             class="cloud3 img-fluid mx-auto d-flex"
