--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,100&family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
       href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
       rel="stylesheet"
     />
@@ -33,49 +39,60 @@
     />
     <link rel="icon" href="favicon.ico?v=2" />
   </head>
-  <body class="bodyclass">
-    <div class="top-container img-fluid">
-      <!-- <div>
+  <body>
+    <header class="header">
+      <h1 class="a-navbar-brand text-center img-fluid">Arinelli</h1>
+      <h2 class="resume a-navbar-brand text-center img-fluid">
+        a Designer UI/UX who can Code for you
+      </h2>
+      <!-- <img
+        class="cloud1 img-fluid mx-auto d-flex"
+        src="images/cloud.png"
+        alt="cloud-img"
+      /> -->
+    </header>
+    <!-- <div class="top-container img-fluid"> -->
+    <!-- <div>
         <img class="cloud2 img-fluid" src="images/cloud.png" alt="cloud-img" />
       </div>
       <div>
         <img class="cloud3 img-fluid" src="images/cloud.png" alt="cloud-img" />
       </div> -->
-      <h1 class="a-navbar-brand text-center img-fluid">Arinelli</h1>
-      <h2 class="resume a-navbar-brand text-center img-fluid">
-        a Designer UI/UX who can Code for you
-      </h2>
-      <div class="img-fluid">
-        <div class="container-fluid">
-          <img
-            class="cloud1 img-fluid mx-auto d-flex"
-            src="images/cloud.png"
-            alt="cloud-img"
-          />
-        </div>
-        <!-- <div>
+
+    <!-- <h2 class="resume a-navbar-brand text-center img-fluid">
+      a Designer UI/UX who can Code for you
+    </h2> -->
+    <!-- <div class="img-fluid">
+      <div class="container-fluid">
+        <img
+          class="cloud1 img-fluid mx-auto d-flex"
+          src="images/cloud.png"
+          alt="cloud-img"
+        />
+      </div> -->
+    <!-- <div>
           <img
             class="cloud2 img-fluid mx-auto d-flex"
             src="images/cloud.png"
             alt="cloud-img"
           />
         </div> -->
-        <div class="">
-          <img
-            class="cloud3 img-fluid mx-auto d-flex"
-            src="images/cloud.png"
-            alt="cloud-img"
-          />
-        </div>
-      </div>
-      <div>
+    <!-- <div class="">
         <img
-          class="mountain img-fluid mx-auto d-flex"
-          src="images/mountain.png"
-          alt="mountain-img"
+          class="cloud3 img-fluid mx-auto d-flex"
+          src="images/cloud.png"
+          alt="cloud-img"
         />
       </div>
-    </div>
+    </div> -->
+    <!-- <div>
+      <img
+        class="mountain img-fluid mx-auto d-flex"
+        src="images/mountain.png"
+        alt="mountain-img"
+      />
+    </div> -->
+    <!-- </div> -->
     <!-- <div class="middle-container">
       <div class="profile">
         <img
@@ -89,11 +106,11 @@
           Non auctor, montes nulla distinctio.
         </p>
     </div> -->
-    <div class="d1 skill-row text-center img-fluid">
+    <!-- <div class="d1 skill-row text-center img-fluid">
       <hr class="dotted3" />
       <hr class="dotted3 shadow" />
       <hr class="dotted3 shadow" />
-    </div>
+    </div> -->
     <div class="row">
       <h4 class="display-6 fw-bold">My Skills</h4>
     </div>
@@ -126,11 +143,11 @@
         </p>
       </div>
     </div>
-    <div class="d2 skill-row text-center img-fluid">
+    <!-- <div class="d2 skill-row text-center img-fluid">
       <hr class="dotted3" />
       <hr class="dotted3" />
       <hr class="dotted3" />
-    </div>
+    </div> -->
 
     <div class="contact-me">
       <div class="row">
