--- a/index.html
+++ b/index.html
@@ -41,10 +41,19 @@
   </head>
   <body>
     <header class="header">
-      <h1 class="a-navbar-brand text-center img-fluid">Arinelli</h1>
-      <h2 class="resume a-navbar-brand text-center img-fluid">
+      <h1 class="primary-main a-navbar-brand text-center img-fluid">
+        Arinelli
+        <!-- <span class="primary-title">Arinelli</span> -->
+        <!-- <span class="primary-sub">a Designer UI/UX who can Code for you</span> -->
+      </h1>
+      <h2 class="primary-sub text-center img-fluid">
         a Designer UI/UX who can Code for you
       </h2>
+
+      <!-- <h1 class="a-navbar-brand text-center img-fluid">Arinelli</h1>
+      <h2 class="resume text-center img-fluid">
+        a Designer UI/UX who can Code for you
+      </h2> -->
       <!-- <img
         class="cloud1 img-fluid mx-auto d-flex"
         src="images/cloud.png"
@@ -154,7 +163,7 @@
         <h2 class="display-8 fw-bold">Get In Touch</h2>
       </div>
       <h3 class="lasth3">Lorem ipsum dolor sit amet, non elit.</h3>
-      <p class="lastP">
+      <p>
         Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales,
         tellus donec dui, ornare erat.
       </p>
