--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="icon" href="favicon.ico?v=2" />
   </head>
   <body>
@@ -120,32 +130,32 @@
       <hr class="dotted3 shadow" />
       <hr class="dotted3 shadow" />
     </div> -->
-    <div class="row">
+    <!-- <div class="row">
       <h4 class="display-6 fw-bold">My Skills</h4>
-    </div>
+    </div> -->
 
     <div class="skills">
-      <div class="skill-row">
+      <div class="skill-row1">
         <img
           class="developer-img img-fluid"
           src="images/prog1.png"
           alt="developer"
         />
-        <h3>Full Stack Development</h3>
-        <p>
+        <h3 class="header3">Full Stack Development</h3>
+        <p class="pheader3">
           Lorem ipsum dolor sit amet, quis in duis, iaculis id felis.
           Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam,
           lectus ante, ut lorem eros.
         </p>
       </div>
-      <div class="skill-row">
+      <div class="skill-row2">
         <img
           class="design-img img-fluid"
           src="images/design-image.png"
           alt="skills"
         />
-        <h3>Design</h3>
-        <p>
+        <h3 class="header3">Design</h3>
+        <p class="pheader3">
           Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu,
           bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu,
           rutrum nam.
@@ -162,7 +172,7 @@
       <div class="row">
         <h2 class="display-8 fw-bold">Get In Touch</h2>
       </div>
-      <h3 class="lasth3">Lorem ipsum dolor sit amet, non elit.</h3>
+      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
       <p>
         Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales,
         tellus donec dui, ornare erat.
