--- a/index.html
+++ b/index.html
@@ -70,6 +70,90 @@
         alt="cloud-img"
       /> -->
     </header>
+    <main>
+      <div class="skills">
+        <div class="skill-row1">
+          <img
+            class="developer-img img-fluid"
+            src="images/prog1.png"
+            alt="developer"
+          />
+          <h3 class="header3">Full Stack Development</h3>
+          <p class="pheader3">
+            Lorem ipsum dolor sit amet, quis in duis, iaculis id felis.
+            Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit
+            nam, lectus ante, ut lorem eros.
+          </p>
+        </div>
+        <div class="skill-row2">
+          <img
+            class="design-img img-fluid"
+            src="images/design-image.png"
+            alt="skills"
+          />
+          <h3 class="header3">Design</h3>
+          <p class="pheader3">
+            Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu,
+            bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel
+            eu, rutrum nam.
+          </p>
+        </div>
+      </div>
+      <!-- <div class="d2 skill-row text-center img-fluid">
+      <hr class="dotted3" />
+      <hr class="dotted3" />
+      <hr class="dotted3" />
+    </div> -->
+
+      <div class="contact-me">
+        <div class="row">
+          <h2 class="display-8 fw-bold">Get In Touch</h2>
+        </div>
+        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+        <p>
+          Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales,
+          tellus donec dui, ornare erat.
+        </p>
+      </div>
+      <div class="button-container">
+        <div class="row">
+          <button class="cta col col-md-3 text-center">
+            <span>My Portfolio</span>
+            <svg class="" width="15px" height="10px" viewBox="0 0 13 10">
+              <path class="" d="M1,5 L11,5"></path>
+              <polyline class="" points="8 1 12 5 8 9"></polyline>
+            </svg>
+          </button>
+          <button class="cta b col col-md-3">
+            <span>Contact Me</span>
+            <svg class="" width="15px" height="10px" viewBox="0 0 13 10">
+              <path class="" d="M1,5 L11,5"></path>
+              <polyline class="" points="8 1 12 5 8 9"></polyline>
+            </svg>
+          </button>
+          <button class="cta c col col-md-3">
+            <span>About Me</span>
+            <svg class="" width="15px" height="10px" viewBox="0 0 13 10">
+              <path class="" d="M1,5 L11,5"></path>
+              <polyline class="" points="8 1 12 5 8 9"></polyline>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="bottom-margin img-fluid">
+        <a
+          class="footer-link"
+          href="https://www.linkedin.com/in/patrick-arinelli/"
+          >LinkedIn</a
+        >
+        <a
+          class="footer-link"
+          href="https://www.facebook.com/patrickarinelli29/"
+          >Facebook</a
+        >
+        <p class="arinelli-p">© 2022 Arinelli</p>
+      </div>
+    </main>
     <!-- <div class="top-container img-fluid"> -->
     <!-- <div>
         <img class="cloud2 img-fluid" src="images/cloud.png" alt="cloud-img" />
@@ -133,72 +217,5 @@
     <!-- <div class="row">
       <h4 class="display-6 fw-bold">My Skills</h4>
     </div> -->
-
-    <div class="skills">
-      <div class="skill-row1">
-        <img
-          class="developer-img img-fluid"
-          src="images/prog1.png"
-          alt="developer"
-        />
-        <h3 class="header3">Full Stack Development</h3>
-        <p class="pheader3">
-          Lorem ipsum dolor sit amet, quis in duis, iaculis id felis.
-          Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam,
-          lectus ante, ut lorem eros.
-        </p>
-      </div>
-      <div class="skill-row2">
-        <img
-          class="design-img img-fluid"
-          src="images/design-image.png"
-          alt="skills"
-        />
-        <h3 class="header3">Design</h3>
-        <p class="pheader3">
-          Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu,
-          bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu,
-          rutrum nam.
-        </p>
-      </div>
-    </div>
-    <!-- <div class="d2 skill-row text-center img-fluid">
-      <hr class="dotted3" />
-      <hr class="dotted3" />
-      <hr class="dotted3" />
-    </div> -->
-
-    <div class="contact-me">
-      <div class="row">
-        <h2 class="display-8 fw-bold">Get In Touch</h2>
-      </div>
-      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-      <p>
-        Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales,
-        tellus donec dui, ornare erat.
-      </p>
-    </div>
-    <div class="button-container text-center">
-      <div class="row">
-        <button class="cta col col-md-3 text-center">
-          <span>Contact Me</span>
-          <svg class="" width="15px" height="10px" viewBox="0 0 13 10">
-            <path class="" d="M1,5 L11,5"></path>
-            <polyline class="" points="8 1 12 5 8 9"></polyline>
-          </svg>
-        </button>
-      </div>
-    </div>
-    <div class="bottom-margin img-fluid">
-      <a
-        class="footer-link"
-        href="https://www.linkedin.com/in/patrick-arinelli/"
-        >LinkedIn</a
-      >
-      <a class="footer-link" href="https://www.facebook.com/patrickarinelli29/"
-        >Facebook</a
-      >
-      <p class="arinelli-p">© 2022 Arinelli</p>
-    </div>
   </body>
 </html>
