--- a/index.html
+++ b/index.html
@@ -71,14 +71,21 @@
       /> -->
     </header>
     <main>
-      <div class="skills">
+      <div class="bodycontainer">
+        <h1>"PEOPLE SAY I'M 8 OR 80, AND I PREFER TO BE 80."</h1>
+        <h2>"PROGRAMMING FOR ME IT'S NOT JUST WORK, IT'S FUN AND MAKES ME HAPPY"</h2>
+        <h3>"I FALLED IN LOVE WITH COMPUTER, SINCE I WAS 5 AND STARTED WEBDESIGN AND I WAS 12"</h3>
+        <h5>"I HAVE TO ADMIT, SOMETIMES I DREAM WITH FLEXBOX, GRIDS AND FUNCTIONS...KKK"</h5>
+      </div>
+      <!-- <div class="skills">
+        
         <div class="skill-row1">
           <img
             class="developer-img img-fluid"
             src="images/prog1.png"
             alt="developer"
           />
-          <h3 class="header3">Full Stack Development</h3>
+          <h3 class="header3">FullStack </h3>
           <p class="pheader3">
             Lorem ipsum dolor sit amet, quis in duis, iaculis id felis.
             Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit
@@ -98,7 +105,7 @@
             eu, rutrum nam.
           </p>
         </div>
-      </div>
+      </div> -->
       <!-- <div class="d2 skill-row text-center img-fluid">
       <hr class="dotted3" />
       <hr class="dotted3" />
@@ -106,14 +113,7 @@
     </div> -->
 
       <div class="contact-me">
-        <div class="row">
-          <h2 class="display-8 fw-bold">Get In Touch</h2>
-        </div>
-        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-        <p>
-          Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales,
-          tellus donec dui, ornare erat.
-        </p>
+        
       </div>
       <div class="button-container">
         <div class="row">
