--- a/index.html
+++ b/index.html
@@ -53,68 +53,29 @@
     <header class="header">
       <h1 class="primary-main a-navbar-brand text-center img-fluid">
         Arinelli
-        <!-- <span class="primary-title">Arinelli</span> -->
-        <!-- <span class="primary-sub">a Designer UI/UX who can Code for you</span> -->
       </h1>
       <h2 class="primary-sub text-center img-fluid">
         a Designer UI/UX who can Code for you
       </h2>
-
-      <!-- <h1 class="a-navbar-brand text-center img-fluid">Arinelli</h1>
-      <h2 class="resume text-center img-fluid">
-        a Designer UI/UX who can Code for you
-      </h2> -->
-      <!-- <img
-        class="cloud1 img-fluid mx-auto d-flex"
-        src="images/cloud.png"
-        alt="cloud-img"
-      /> -->
     </header>
+
     <main>
       <div class="bodycontainer">
-        <h1>"PEOPLE SAY I'M 8 OR 80, AND I PREFER TO BE 80."</h1>
-        <h2>"PROGRAMMING FOR ME IT'S NOT JUST WORK, IT'S FUN AND MAKES ME HAPPY"</h2>
-        <h3>"I FALLED IN LOVE WITH COMPUTER, SINCE I WAS 5 AND STARTED WEBDESIGN AND I WAS 12"</h3>
-        <h5>"I HAVE TO ADMIT, SOMETIMES I DREAM WITH FLEXBOX, GRIDS AND FUNCTIONS...KKK"</h5>
+        <!-- <h1>"PEOPLE SAY I'M 8 OR 80, AND I PREFER TO BE 80."</h1>
+        <h2>
+          "PROGRAMMING FOR ME IT'S NOT JUST WORK, IT'S FUN AND MAKES ME HAPPY"
+        </h2>
+        <h3>
+          "I FALLED IN LOVE WITH COMPUTER, SINCE I WAS 5 AND STARTED WEBDESIGN
+          WHEN I WAS 12"
+        </h3>
+        <h5>
+          "I HAVE TO ADMIT, SOMETIMES I DREAM WITH FLEXBOX, GRIDS AND
+          FUNCTIONS...KKK"
+        </h5> -->
       </div>
-      <!-- <div class="skills">
-        
-        <div class="skill-row1">
-          <img
-            class="developer-img img-fluid"
-            src="images/prog1.png"
-            alt="developer"
-          />
-          <h3 class="header3">FullStack </h3>
-          <p class="pheader3">
-            Lorem ipsum dolor sit amet, quis in duis, iaculis id felis.
-            Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit
-            nam, lectus ante, ut lorem eros.
-          </p>
-        </div>
-        <div class="skill-row2">
-          <img
-            class="design-img img-fluid"
-            src="images/design-image.png"
-            alt="skills"
-          />
-          <h3 class="header3">Design</h3>
-          <p class="pheader3">
-            Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu,
-            bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel
-            eu, rutrum nam.
-          </p>
-        </div>
-      </div> -->
-      <!-- <div class="d2 skill-row text-center img-fluid">
-      <hr class="dotted3" />
-      <hr class="dotted3" />
-      <hr class="dotted3" />
-    </div> -->
 
-      <div class="contact-me">
-        
-      </div>
+      <div class="contact-me"></div>
       <div class="button-container">
         <div class="row">
           <button class="cta col col-md-3 text-center">
@@ -154,68 +115,5 @@
         <p class="arinelli-p">© 2022 Arinelli</p>
       </div>
     </main>
-    <!-- <div class="top-container img-fluid"> -->
-    <!-- <div>
-        <img class="cloud2 img-fluid" src="images/cloud.png" alt="cloud-img" />
-      </div>
-      <div>
-        <img class="cloud3 img-fluid" src="images/cloud.png" alt="cloud-img" />
-      </div> -->
-
-    <!-- <h2 class="resume a-navbar-brand text-center img-fluid">
-      a Designer UI/UX who can Code for you
-    </h2> -->
-    <!-- <div class="img-fluid">
-      <div class="container-fluid">
-        <img
-          class="cloud1 img-fluid mx-auto d-flex"
-          src="images/cloud.png"
-          alt="cloud-img"
-        />
-      </div> -->
-    <!-- <div>
-          <img
-            class="cloud2 img-fluid mx-auto d-flex"
-            src="images/cloud.png"
-            alt="cloud-img"
-          />
-        </div> -->
-    <!-- <div class="">
-        <img
-          class="cloud3 img-fluid mx-auto d-flex"
-          src="images/cloud.png"
-          alt="cloud-img"
-        />
-      </div>
-    </div> -->
-    <!-- <div>
-      <img
-        class="mountain img-fluid mx-auto d-flex"
-        src="images/mountain.png"
-        alt="mountain-img"
-      />
-    </div> -->
-    <!-- </div> -->
-    <!-- <div class="middle-container">
-      <div class="profile">
-        <img
-          class="profileImg"
-          src="images/patrickGuitar.jpg"
-          alt="Arinelli-Guitar"
-        />
-        <h2 class="h2head">Hello guys</h2>
-        <p class="profile-p">
-          Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna.
-          Non auctor, montes nulla distinctio.
-        </p>
-    </div> -->
-    <!-- <div class="d1 skill-row text-center img-fluid">
-      <hr class="dotted3" />
-      <hr class="dotted3 shadow" />
-      <hr class="dotted3 shadow" />
-    </div> -->
-    <!-- <div class="row">
-      <h4 class="display-6 fw-bold">My Skills</h4>
-    </div> -->
   </body>
 </html>
